# car-accidents-data-processing

./: .gitignore  CMakeLists.txt  README.md  TODO  allQueries_mono_read.cc  allQueries_monoread.cc  allQueries_multi_read.cc  allQueries_multiread.cc  allQueries_serial.cc  execute.sh  for_strager_with_love.txt  notes_mpi.txt  notes_openmp.txt  requirements.txt  run.py
MPI/: CMakeLists.txt  allQueries_alt_loading.cc  allQueries_mpi_omp.cc  query1_monoread_mpi.cc  query1_mpi.cc  query2_monoread_mpi.cc  query2_mpi.cc  query3_monoread_mpi.cc  query3_mpi.cc  test.cc
MPI/examples/kmeans_mpi/: Makefile  kmeans.cc  kmeans_serial.cc
OpenMP/: CMakeLists.txt  accperweek_serial.cc  numacc_perc_serial.cc  query1_monoread_omp.cc  query1_omp.cc  query1_serial.cc  query2_monoread_omp.cc  query2_omp.cc  query2_serial.cc  query3_monoread_omp.cc  query3_omp.cc  query3_serial.cc  serial.cc  test.cc  test.cpp
OpenMP/examples/: cpusec.h  primes.cc
OpenMP/examples/kmeans_omp/: k-means clustering - Wikipedia.desktop  kmeans_noatomic2.cc  kmeans_noatomic_ale.cc  kmeans_par.cc
OpenMP/utilities/: CSVIterator.h  CSVRow.cc  CSVRow.cpp  CSVRow.h  utility.cc  utility.h
dataset/: dataset_gen.py
examples/: Makefile  cpusec.cc  fibonacci  fibonacci.cc  parallel.cc  primes
examples/kmeans_omp/: Makefile  kmeans_noatomic  kmeans_noatomic2  kmeans_noatomic_ale  kmeans_omp_bugfix_20191118  kmeans_optimized  kmeans_optimized.cc  kmeans_par  kmeans_serial  kmeans_serial.cc
include/: CMakeLists.txt  Communicator.h  Loader.h  Node.h  Printer.h  Process.h  Scatterer.h  Stats.h  process.h
src/: CMakeLists.txt  Communicator.cc  Loader.cc  Printer.cc  Process.cc  Scatterer.cc  Stats.cc  allQueries_monoread.cc  allQueries_multiread.cc  allQueries_serial.cc
src/MPI/: CMakeLists.txt  query1_monoread_mpi.cc  query2_monoread_mpi.cc  query3_monoread_mpi.cc  test.cc
src/MPI/examples/: ping.c
src/MPI/examples/kmeans_mpi/: kmeans  kmeans.cc  kmeans_serial
src/OpenMP/: CMakeLists.txt  test.cc
src/OpenMP/examples/kmeans_omp/: kmeans_noatomic.cc
src/utils/: CMakeLists.txt
src/utils/csv_row/include/: CMakeLists.txt  CSVRow.h
src/utils/csv_row/src/: CMakeLists.txt  CSVRow.cc
src/utils/include/: CMakeLists.txt  data_types.h  utility.h
src/utils/src/: CMakeLists.txt  utility.cc
stats/: plot.py  plot_bar.py  plot_chart.py
utilities/: CMakeLists.txt  CSVRow.cc  CSVRow.h  utility.cc  utility.h
utilities/csv_row/: CSVRow.cc  CSVRow.h
utilities/csv_row/include/: CSVRow.h
utilities/csv_row/src/: CMakeLists.txt  CSVRow.cc
utilities/src/: CMakeLists.txt
utils/: CMakeLists.txt
utils/csv_row/include/: CMakeLists.txt
utils/csv_row/src/: CMakeLists.txt
utils/include/: CMakeLists.txt  utility.h
utils/src/: CMakeLists.txt  utility.cc
